test/files/neg/t6666e.check
t6666e.scala:8: error: Implementation restriction: anonymous class $anonfun requires premature access to class Crash.
    this(Nil.collect{case x =>})
                    ^
one error found
